# Linear-MPC

./: CMakeLists.txt  README.md  config.h  path.h.cmake
include/: LinearMPC.h  MatrixDefinition.h  MatrixDefinition.h.bak  Timer.h
solver/qpOASES/: CMakeLists.txt
solver/qpOASES/include/: qpOASES.hpp
solver/qpOASES/interfaces/c/: c_example1.c  c_example1a.c  c_example1b.c
solver/qpOASES/testing/cpp/: test_example4.cpp  test_example5.cpp
src/: LinearMPC.cpp
test/: data_plot.py  test.cpp
